--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -235,3 +235,19 @@ body {
     transform-origin: center;
     animation: growX 0.25s ease-in-out forwards;
 }
+
+@keyframes ripple {
+    0% {
+        transform: scale(0);
+        opacity: 0.5;
+    }
+
+    100% {
+        transform: scale(2.5);
+        opacity: 0;
+    }
+}
+
+.animate-ripple {
+    animation: ripple 0.6s linear;
+}
